--- a/views/warehouse_views.xml
+++ b/views/warehouse_views.xml
@@ -1,5 +1,16 @@
 <odoo>
     <data>
+        <record model="ir.ui.view" id="stock_location_search_view">
+            <field name="name">库存位置搜索视图</field>
+            <field name="model">stock.location</field>
+            <field name="arch" type="xml">
+                <search>
+                    <group string="Filter">
+                        <filter name="filter_internal" string="内部位置" domain="[('usage', '=', 'internal')]"/>
+                    </group>
+                </search>
+            </field>
+        </record>
         <!-- explicit list view definition -->
         <record model="ir.ui.view" id="stock_warehouse_form_view">
             <field name="name">仓库</field>
@@ -12,6 +23,8 @@
                             <h1>
                                 <field name="name"/>
                             </h1>
+                            <label for="code"/>
+                            <field name="code"/>
                         </div>
                         <group>
                             <field name="partner_id"/>
@@ -43,6 +56,7 @@
             <field name="name">库存位置资料</field>
             <field name="res_model">stock.location</field>
             <field name="view_mode">tree,form</field>
+            <field name="context">{'search_default_filter_internal':1}</field>
         </record>
 
         <!-- Top menu item -->
