--- a/views/picking_views.xml
+++ b/views/picking_views.xml
@@ -1,15 +1,56 @@
 <odoo>
     <data>
-        <record model="ir.ui.view" id="stock_picking_form_view">
+        <record model="ir.ui.view" id="stock_picking_type_form_view">
             <field name="name">库存作业类型</field>
             <field name="model">stock.picking.type</field>
             <field name="arch" type="xml">
                 <form>
-                    <field name="name"/>
+                    <div class="oe_title">
+                        <label for="name"/>
+                        <h1>
+                            <field name="name"/>
+                        </h1>
+                        <group>
+                            <field name="code"/>
+                            <field name="is_production"/>
+                        </group>
+                    </div>
+                    <separator/>
+                    <group string="仓库/位置">
+                        <group>
+                            <field name="warehouse_id"/>
+                        </group>
+                        <newline/>
+                        <group>
+                            <field name="default_location_src_id" attrs="{'required': [('code', '=', 'internal')]}"/>
+                        </group>
+                        <group>
+                            <field name="default_location_dest_id"
+                                   attrs="{'required': [('code', 'in', ('internal', 'incoming'))]}"/>
+                        </group>
+                    </group>
+                    <separator/>
+                    <group string="生产作业设置" attrs="{'invisible':[('is_production','=', False)]}">
+                        <group>
+                            <field name="orig_product_type" attrs="{'required':[('is_production','=','1')]}"/>
+
+                        </group>
+                        <group>
+                            <field name="product_type" attrs="{'required':[('is_production','=','1')]}"/>
+                        </group>
+                    </group>
+                    <separator/>
+                    <group string="账单费用设置">
+                        <group>
+                            <field name="invoice_type_id"/>
+                        </group>
+                    </group>
 
                 </form>
             </field>
         </record>
+
+
         <!-- explicit list view definition -->
         <record model="ir.ui.view" id="stock_picking_form_view">
             <field name="name">库存作业单</field>
@@ -32,6 +73,7 @@
                             <group>
                                 <field name="partner_id"/>
                                 <field name="date"/>
+                                <field name="show_order_line2"/>
                             </group>
                             <group>
                                 <field name="picking_type_id"/>
@@ -48,7 +90,26 @@
                                         <field name="sequence" widget="handle"/>
                                         <field name="location_id"/>
                                         <field name="location_dest_id"/>
-                                        <field name="product_id"/>
+                                        <field name="product_id" required="1"/>
+                                        <field name="pcs"/>
+                                        <field name="part"/>
+                                        <field name="qty"/>
+                                        <field name="uom"/>
+                                        <field name="package_list_id" invisible="1"/>
+                                        <field name="unit_price"/>
+                                        <field name="amount" readonly="1"/>
+                                        <field name="state" invisible="1"/>
+                                    </tree>
+                                </field>
+                            </page>
+                            <page string="明细行2">
+                                <field name="order_line2_ids">
+                                    <tree editable="bottom">
+                                        <field name="sequence" widget="handle"/>
+                                        <field name="location_id"/>
+                                        <field name="location_dest_id"/>
+                                        <field name="block_id"/>
+                                        <field name="thickness_id"/>
                                         <field name="pcs"/>
                                         <field name="part"/>
                                         <field name="qty"/>
