--- a/views/picking_views.xml
+++ b/views/picking_views.xml
@@ -5,51 +5,52 @@
             <field name="model">stock.picking.type</field>
             <field name="arch" type="xml">
                 <form>
-                    <div class="oe_title">
-                        <label for="name"/>
-                        <h1>
-                            <field name="name"/>
-                        </h1>
-                        <group>
-                            <field name="code"/>
-                            <field name="is_production"/>
-                        </group>
-                    </div>
-                    <separator/>
-                    <group string="仓库/位置">
-                        <group>
-                            <field name="warehouse_id"/>
-                        </group>
-                        <newline/>
-                        <group>
-                            <field name="default_location_src_id" attrs="{'required': [('code', '=', 'internal')]}"/>
-                        </group>
-                        <group>
-                            <field name="default_location_dest_id"
-                                   attrs="{'required': [('code', 'in', ('internal', 'incoming'))]}"/>
-                        </group>
-                    </group>
-                    <separator/>
-                    <group string="生产作业设置" attrs="{'invisible':[('is_production','=', False)]}">
-                        <group>
-                            <field name="orig_product_type" attrs="{'required':[('is_production','=','1')]}"/>
+                    <sheet>
 
-                        </group>
+                        <div class="oe_title">
+                            <label for="name"/>
+                            <h1>
+                                <field name="name"/>
+                            </h1>
+                            <group>
+                                <field name="code"/>
+                                <field name="is_production"/>
+                            </group>
+                        </div>
+                        <separator/>
                         <group>
-                            <field name="product_type" attrs="{'required':[('is_production','=','1')]}"/>
+                            <group string="仓库/位置">
+                                <field name="warehouse_id"/>
+
+                                <field name="default_location_src_id"
+                                       attrs="{'required': [('code', '=', 'internal')]}"/>
+
+                                <field name="default_location_dest_id"
+                                       attrs="{'required': [('code', 'in', ('internal', 'incoming'))]}"/>
+                            </group>
                         </group>
-                    </group>
-                    <separator/>
-                    <group string="账单费用设置">
-                        <group>
-                            <field name="invoice_type_id"/>
+                        <separator/>
+                        <group string="生产作业设置" attrs="{'invisible':[('is_production','=', False)]}">
+                            <group>
+                                <field name="orig_product_type" attrs="{'required':[('is_production','=','1')]}"/>
+
+                            </group>
+                            <group>
+                                <field name="product_type" attrs="{'required':[('is_production','=','1')]}"/>
+                            </group>
                         </group>
-                    </group>
+                        <separator/>
+                        <group string="账单费用设置">
+                            <group>
+                                <field name="invoice_type_id"/>
+                            </group>
+                        </group>
+                    </sheet>
 
                 </form>
+
             </field>
         </record>
-
 
         <!-- explicit list view definition -->
         <record model="ir.ui.view" id="stock_picking_form_view">
@@ -58,9 +59,17 @@
             <field name="arch" type="xml">
                 <form>
                     <header>
-                        <button name="action_confirm" type="object" string="Confirm"/>
-                        <button name="action_done" type="object" string="Done"/>
-                        <field name="state" widget="statusbar" statusbar_visible="Draft,Waiting,Confirm,Done"/>
+                        <button name="action_draft" type="object" string="draft"
+                                attrs="{'invisible':[('state','not in',['cancel', 'done'])]}"/>
+                        <button name="action_waiting" type="object" string="Waiting"
+                                attrs="{'invisible':[('state','not in',['writing', 'done', 'cancel'])]}"/>
+                        <button name="action_confirm" type="object" string="Confirm"
+                                attrs="{'invisible':[('state','not in',['confirm', 'done', 'cancel'])]}"/>
+                        <button name="action_done" type="object" string="Done"
+                                attrs="{'invisible':[('state','not in',['draft', 'done', 'writing', 'cancel'])]}"/>
+                        <button name="action_cancel" type="object" string="Cancel"
+                                attrs="{'invisible':[('state','not in',['cancel', 'done'])]}"/>
+                        <field name="state" widget="statusbar" statusbar_visible="Draft,Waiting,Confirm,Done,Cancel"/>
                     </header>
                     <sheet>
                         <div class="oe_title">
@@ -73,24 +82,27 @@
                             <group>
                                 <field name="partner_id"/>
                                 <field name="date"/>
-                                <field name="show_order_line2"/>
                             </group>
                             <group>
-                                <field name="picking_type_id"/>
+                                <field name="picking_type_id" attrs="{'readonly':[('state','!=','draft')]}"/>
                             </group>
                             <group>
                                 <field name="default_location_src_id"/>
                                 <field name="default_location_dest_id"/>
+                                <field name="code"/>
+                                <field name="block_ids" invisible="1"/>
                             </group>
                         </group>
                         <notebook>
                             <page string="明细行">
-                                <field name="order_line_ids">
+                                <field name="order_line_ids"
+                                       context="{'default_location_id':default_location_src_id, 'default_location_dest_id':default_location_dest_id,
+                                       'default_code':code}">
                                     <tree editable="bottom">
                                         <field name="sequence" widget="handle"/>
                                         <field name="location_id"/>
                                         <field name="location_dest_id"/>
-                                        <field name="product_id" required="1"/>
+                                        <field name="product_id" required="1" options="{'no_create': True}"/>
                                         <field name="pcs"/>
                                         <field name="part"/>
                                         <field name="qty"/>
@@ -99,16 +111,19 @@
                                         <field name="unit_price"/>
                                         <field name="amount" readonly="1"/>
                                         <field name="state" invisible="1"/>
+                                        <field name="picking_id" invisible="1"/>
                                     </tree>
                                 </field>
                             </page>
-                            <page string="明细行2">
-                                <field name="order_line2_ids">
+                            <page string="明细行2"
+                                  attrs="{'invisible':['|',('state','in',['draft', 'cancel']),('code','!=','production')]}">
+                                <field name="order_line2_ids" context="{'default_location_id':default_location_src_id, 'default_location_dest_id':default_location_dest_id,
+                                       'default_code':code, 'block_ids':block_ids}">
                                     <tree editable="bottom">
                                         <field name="sequence" widget="handle"/>
                                         <field name="location_id"/>
                                         <field name="location_dest_id"/>
-                                        <field name="block_id"/>
+                                        <field name="block_id" options="{'no_create':True}"/>
                                         <field name="thickness_id"/>
                                         <field name="pcs"/>
                                         <field name="part"/>
@@ -125,6 +140,7 @@
                                 <field name="move_ids">
                                     <tree create="0" edit="0" delete="0">
                                         <field name="sequence" widget="handle"/>
+                                        <field name="state"/>
                                         <field name="location_id"/>
                                         <field name="location_dest_id"/>
                                         <field name="product_id"/>
